--- a/EXApp/package.json
+++ b/EXApp/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "apollo-client": "^0.10.1",
     "graphql-tag": "^1.3.1",
+    "native-base": "^2.0.12",
     "react": "15.4.2",
     "react-apollo": "^0.13.2",
     "react-native": "^0.42.0"
