--- a/EXApp/android/app/build.gradle
+++ b/EXApp/android/app/build.gradle
@@ -126,6 +126,8 @@ android {
 }
 
 dependencies {
+    compile project(':mobile-center-crashes')
+    compile project(':mobile-center-analytics')
     compile project(':react-native-lock')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
