--- a/EXApp/package.json
+++ b/EXApp/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start",
+    "postinstall": "remotedev-debugger",
+    "start": "node_modules/react-native/packager/packager.sh",
+    "eslint": "eslint",
     "test": "jest"
   },
   "dependencies": {
@@ -15,13 +17,38 @@
     "react": "15.4.2",
     "react-apollo": "^0.13.2",
     "react-native": "^0.42.0",
-    "react-native-lock": "^0.5.0"
+    "react-native-lock": "^0.5.0",
+    "color": "^0.11.3",
+    "lodash": "^4.13.1",
+    "moment": "^2.13.0",
+    "react-native-code-push": "1.17.0-beta",
+    "react-native-easy-grid": "0.1.8",
+    "react-native-modalbox": "^1.3.4",
+    "react-native-navigation-redux-helpers": "^0.5.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-persist": "^4.0.0",
+    "redux-thunk": "^2.2.0",
+    "remote-redux-devtools": "^0.5.0",
+    "remote-redux-devtools-on-debugger": "^0.7.0"
   },
   "devDependencies": {
-    "babel-jest": "19.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "jest": "19.0.2",
-    "react-test-renderer": "15.4.2"
+    "babel-eslint": "^6.1.2",
+    "babel-jest": "17.0.0",
+    "babel-preset-react-native": "1.9.0",
+    "chai": "^3.5.0",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.1",
+    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-react-native": "^2.0.0",
+    "jest": "17.0.0",
+    "jest-react-native": "17.0.0",
+    "mocha": "^2.5.3",
+    "react-test-renderer": "15.3.2",
+    "remote-redux-devtools-on-debugger": "^0.4.6",
+    "remotedev-server": "^0.1.2"
   },
   "jest": {
     "preset": "react-native"
