--- a/EXApp/package.json
+++ b/EXApp/package.json
@@ -10,21 +10,22 @@
   },
   "dependencies": {
     "apollo-client": "^0.10.1",
+    "color": "^0.11.3",
     "graphql-tag": "^1.3.1",
+    "lodash": "^4.13.1",
     "mobile-center-analytics": "^0.2.2",
     "mobile-center-crashes": "^0.2.2",
+    "moment": "^2.13.0",
     "native-base": "^2.0.12",
     "react": "15.4.2",
     "react-apollo": "^0.13.2",
     "react-native": "^0.42.0",
-    "react-native-lock": "^0.5.0",
-    "color": "^0.11.3",
-    "lodash": "^4.13.1",
-    "moment": "^2.13.0",
     "react-native-code-push": "1.17.0-beta",
     "react-native-easy-grid": "0.1.8",
+    "react-native-lock": "^0.5.0",
     "react-native-modalbox": "^1.3.4",
     "react-native-navigation-redux-helpers": "^0.5.0",
+    "react-native-router-flux": "^3.38.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-persist": "^4.0.0",
